--- a/src/main/resources/templates/main/login-header-no-noti.html
+++ b/src/main/resources/templates/main/login-header-no-noti.html
@@ -6,7 +6,7 @@
                         <div class="toolbar-area">
                             <div class="toolbar-row">
                                 <div class="toolbar-logo-wrap">
-                                    <a class="sc-csojp hlisis logo-wrap">
+                                    <a href="/main/main" class="sc-csojp hlisis logo-wrap">
                                         <img
                                             alt="main-log"
                                             class="sc-iijcti hkaqym main-logo"
