--- a/src/main/resources/static/css/login/password.css
+++ b/src/main/resources/static/css/login/password.css
@@ -298,3 +298,17 @@ body form[name=register-form] .stunning-box span.warning-msg {
     padding-left: 14px;
     color: #f21724;
 }
+.password-btn-complete {
+    font-weight: 500;
+    font-size: 14px;
+    text-align: center;
+    letter-spacing: -.5px;
+    border-radius: 4px;
+    color: #fff;
+    background: #0d0d0d;
+    border: none;
+    cursor: pointer;
+    height: 50px;
+    line-height: 50px;
+    margin-bottom: 10px;
+}
