--- a/src/main/resources/templates/mypage/mypage.html
+++ b/src/main/resources/templates/mypage/mypage.html
@@ -233,10 +233,12 @@
                                                             </div>
                                                             <div
                                                                 class="lnb-item"
+                                                                style="width: 0px;"
                                                             >
                                                                 <a
                                                                     href="#"
                                                                     class="side-baner-content"
+                                                                    style="display: none;"
                                                                     onclick="showTab('gratitude', this)"
                                                                     >기부 감사
                                                                     인사</a
