--- a/src/main/resources/templates/admin.html
+++ b/src/main/resources/templates/admin.html
@@ -432,7 +432,7 @@
                                                     maxlength="150"
                                                     size="150"
                                                     placeholder="간단한 제목을 입력해주세요."
-                                                    value="마이페이지에서 문제가 발생했는데 해결해주세요."
+                                                    value=""
                                             />
                                         </div>
                                         <div class="form-field-gap"></div>
@@ -440,7 +440,7 @@
                                             <label for="request-description">공지사항 내용</label>
                                             <textarea
                                                     name="request-description"
-                                            >마이페이지를 열었더니 제가 이전에 충전한 포인트가 없어졌는데 이거 왜 그런건가요? 사진 첨부해서 보냅니다.</textarea>
+                                            ></textarea>
                                             <input
                                                     type="hidden"
                                                     name="request-description-input"
@@ -635,7 +635,7 @@
                                                 maxlength="150"
                                                 size="150"
                                                 placeholder="간단한 제목을 입력해주세요."
-                                                value="마이페이지에서 문제가 발생했는데 해결해주세요."
+                                                value=""
                                         />
                                     </div>
                                     <div class="form-field-gap"></div>
@@ -643,7 +643,7 @@
                                         <label for="request-description">공지사항 내용</label>
                                         <textarea
                                                 name="request-description"
-                                        >마이페이지를 열었더니 제가 이전에 충전한 포인트가 없어졌는데 이거 왜 그런건가요? 사진 첨부해서 보냅니다.</textarea>
+                                        ></textarea>
                                         <input
                                                 type="hidden"
                                                 name="request-description-input"
@@ -1027,7 +1027,7 @@
                                     maxlength="150"
                                     size="150"
                                     placeholder="간단한 제목을 입력해주세요."
-                                    value="마이페이지에서 문제가 발생했는데 해결해주세요."
+                                    value=""
                                 />
                             </div>
                             <div class="form-field-gap"></div>
@@ -1036,7 +1036,7 @@
                                 <textarea
                                     name="request-description"
                                     id="request-description"
-                                >마이페이지를 열었더니 제가 이전에 충전한 포인트가 없어졌는데 이거 왜 그런건가요? 사진 첨부해서 보냅니다.</textarea>
+                                ></textarea>
                                 <input
                                     type="hidden"
                                     name="request-description-input"
