--- a/src/main/resources/templates/help/help-write.html
+++ b/src/main/resources/templates/help/help-write.html
@@ -17,8 +17,10 @@
                     <div class="help-logo">
                         <a href="/help/help">
                             <img
-                                src="https://help.loud.kr/hc/theming_assets/01HZKZ8AF22DN6ZA42CE4143EF"
-                                alt="온정 고객센터 페이지"
+                                    alt="main-log"
+                                    class="sc-iijcti hkaqym main-logo"
+                                    id="imge-logo-missbarrytremblay"
+                                    src="/images/onjung-logo.png"
                             />
                         </a>
                         <span>
